--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --detectOpenHandles --forceExit"
+    "test": "jest --detectOpenHandles --forceExit --coverage"
   },
   "dependencies": {
     "@emotion/react": "11.4.0",
@@ -30,6 +30,7 @@
     "@babel/preset-env": "7.14.8",
     "@babel/preset-typescript": "7.14.5",
     "@emotion/babel-plugin": "11.3.0",
+    "@testing-library/react": "12.0.0",
     "@testing-library/react-hooks": "7.0.1",
     "@types/dompurify": "^2.2.3",
     "@types/jest": "26.0.24",
