--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-env": "7.14.8",
     "@babel/preset-typescript": "7.14.5",
     "@emotion/babel-plugin": "11.3.0",
+    "@emotion/jest": "^11.3.0",
     "@testing-library/react": "12.0.0",
     "@testing-library/react-hooks": "7.0.1",
     "@types/dompurify": "^2.2.3",
