--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --detectOpenHandles --forceExit --coverage"
+    "test": "jest --detectOpenHandles --forceExit --coverage",
+    "test:watch": "jest --detectOpenHandles --forceExit --watch"
   },
   "dependencies": {
     "@emotion/react": "11.4.0",
